changes made for routing

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Welfra v2</title>
+  <title>Welfra Investment and Assets Management Private Limited</title>
 </head>
 
 <body class="">
